--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_SERVER_DOMAIN = http://localhost:8080
-REACT_APP_ADMIN_EMAIL = lokesh.n890@gmail.com
+REACT_APP_ADMIN_EMAIL = lokesh1@gmail.com
